--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -4,9 +4,10 @@
 @tailwind utilities;
 
 
-body,html, #root {
+body,html{
+  height: 100%;
+  width: 100%;
   margin: 0;
-  height: 100vh;
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
